2007-06-17  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs,
	  Monodoc.Editor.Gui/DocumentTagTable.cs: More Deserializer
	  implementation work.

2007-06-17  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/EditorWindow.cs: Testing Deserialize method.
	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs,
	  Monodoc.Editor.Gui/Monodoc.Editor.Gui.mdp: Added
	  DocumentBufferArchiver that handles the deserialization of an XM
	  string stream to a TextBuffer.
	* Monodoc.Editor.Gui/DocumentTagTable.cs: Typo.

2007-06-17  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Utils/Test/Examples/WrapMode.xml,
	  Monodoc.Editor.Utils/Monodoc.Editor.Utils.mdp: Added WrapMode.xml
	  doc for test purposes.
	* Monodoc.Editor.Gui/DocumentTagTable.cs: Added basic tags for
	  DocumentBuffer.

2007-06-17  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/Monodoc.Editor.Gui.mdp: Added two new classes to
	  project.
	* Monodoc.Editor.Gui/DocumentTagTable.cs: Added DocumentTagTable based
	  in Gtk.TextTagTable.
	* Monodoc.Editor.Gui/DocumentEditor.cs: Minor changes.
	* Monodoc.Editor.Gui/DocumentBuffer.cs: Added DocumentBuffer class that
	  is based in Gtk.TextBuffer.

2007-06-17  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/EditorWindow.cs, Monodoc.Editor/Monodoc.Editor.mdp,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  Monodoc.Editor/gtk-gui/gui.stetic: Using DocumentEditor in
	  EditorWindow.
	* Monodoc.Editor.Gui/Monodoc.Editor.Gui.mdp,
	  Monodoc.Editor.Gui/gtk-gui/objects.xml: Export DocumentEditor for
	  stetic palette.
	* Monodoc.Editor.Gui/DocumentEditor.cs: Added default construtor for
	  DocumentEditor.

2007-06-17  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Packages.mdse, Monodoc.Editor.mds, Monodoc.Editor.Gui,
	  Monodoc.Editor.Gui/AssemblyInfo.cs,
	  Monodoc.Editor.Gui/Monodoc.Editor.Gui.mdp,
	  Monodoc.Editor.Gui/gtk-gui,